prova a cambiare l'etichetta

--- a/exampleSite/data/homepage.yml
+++ b/exampleSite/data/homepage.yml
@@ -7,7 +7,7 @@ banner:
   button:
     enable: true
     label: WHAT WE DO
-    link: "#mission"
+    target: "#mission"
 mission:
   enable: true
   title: Verso un futuro partecipato
