Aggiungi immagine per relazione generale

--- a/exampleSite/data/homepage.yml
+++ b/exampleSite/data/homepage.yml
@@ -49,10 +49,10 @@ product:
       infinite.
     project_url: https://www.monachelle.org/wp-content/uploads/2020/09/presentazione%2016%20settembre.pdf
   - title: Struttura
-    image: images/product/product-02.jpg
-    content: Omega OS Version 2.0 is the world’s first and only cloud operating system.
-      See how this revolutionarys oftware can become the center of your business.
-    project_url: "#"
+    image: images/product/progetto-02.jpg
+    content: Leggi la relazione generale sviluppata dal nostro gruppo tecnico.
+      Guarda come le idee possono realizzarsi.
+    project_url: https://www.monachelle.org/wp-content/uploads/2020/09/3-Relazione-Generale-Monachelle-13-09-20-rev.pdf
   - title: Amministrazione
     image: images/product/product-03.jpg
     content: Il Comitato di Scopo Monachelle è l'organo garante per il progetto,
