cambia testo pulsante

--- a/exampleSite/data/homepage.yml
+++ b/exampleSite/data/homepage.yml
@@ -6,7 +6,7 @@ banner:
   image: "/images/facciata-monachelle.jpg"
   button:
     enable: true
-    label: WHAT WE DO
+    label: Cosa facciamo
     link: mission
 mission:
   enable: true
