cambia etichetta di sezione

--- a/exampleSite/data/homepage.yml
+++ b/exampleSite/data/homepage.yml
@@ -61,7 +61,7 @@ product:
     project_url: https://www.monachelle.org/2020/09/14/comitato-di-scopo-monachelle/
 contact:
   enable: true
-  section: Contattaci
+  section: Contact
   title: Dove trovarci
   image: images/pericolo.jpg
   content: L'era dei Beni Comuni è appena iniziata e c'è un mondo di possibilità ancora
